Resolved the saved request used in within AS login issue